removing 'src-test' directories from SDK

--- a/brjs-sdk/build.gradle
+++ b/brjs-sdk/build.gradle
@@ -309,7 +309,7 @@ task distZip, type:Zip, dependsOn: [assemble], {
 	from "workspace/"
 	into "BladeRunnerJS/"
 	include "sdk/**", "sdk/**", "apps/apps.txt", "LICENSE", "README.txt"
-	exclude "**/.gitignore", "**/.p4ignore", "**/libs/**/tests/*", "**/system-applications/**/tests/*", "**/bundles/*", "**/javascript/caplin/test/*", "**/node_modules/**", "**/*_NODIST/*"
+	exclude "**/.gitignore", "**/.p4ignore", "**/libs/**/tests/*", "**/libs/**/src-test/*", "**/system-applications/**/tests/*", "**/system-applications/**/src-test/*", "**/bundles/*", "**/javascript/caplin/test/*", "**/node_modules/**", "**/*_NODIST/*"
 }
 build.dependsOn distZip
 distZip.mustRunAfter test
@@ -375,7 +375,9 @@ task checkSdkStructure, type:com.caplin.gradle.tasks.CheckDirectoryStructure, de
 	   "**/js-test-driver/bundles/**/*",
 	   "**/libs/**/tests/**/*",
 	   "**/system-applications/**/tests/**/*",
+	   "**/system-applications/**/src-test/**/*",
 	   "*/sdk/libs/javascript/**/tests/**",
+	   "*/sdk/libs/javascript/**/src-test/**",
 	   "*/sdk/libs/javascript/thirdparty/**",
 	   "*/sdk/libs/javascript/br-libs/**",
 	   "*/sdk/run*",
