Updated '.travis.yml' to allow Travis to run our browser tests.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,13 @@ git:
 before_install:
 - export JAVA7_HOME=/usr/lib/jvm/java-7-oracle
 - export JAVA8_HOME=/usr/lib/jvm/java-8-oracle
+- "export DISPLAY=:99.0"
+- "sh -e /etc/init.d/xvfb start"
 install:
 - TERM=dumb ./gradlew compileJava
 script:
 - TERM=dumb ./gradlew testJava
+- TERM=dumb ./gradlew :brjs-sdk:test
 notifications:
   hipchat:
     rooms:
