--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
 - export JAVA8_HOME=/usr/lib/jvm/java-8-oracle
 - "export DISPLAY=:99.0"
 - "sh -e /etc/init.d/xvfb start"
-- uname -a
+- sudo dpkg --add-architecture i386
 - sudo apt-get update -qq
 - sudo apt-get install ia32-libs
 install:
