--- a/brjs-sdk/build.gradle
+++ b/brjs-sdk/build.gradle
@@ -309,7 +309,7 @@ task distZip, type:Zip, dependsOn: [assemble], {
 	from "workspace/"
 	into "BladeRunnerJS/"
 	include "sdk/**", "sdk/**", "apps/apps.txt", "LICENSE", "README.txt"
-	exclude "**/.gitignore", "**/.p4ignore", "**/libs/**/tests/*", "**/libs/**/src-test/*", "**/system-applications/**/tests/*", "**/system-applications/**/src-test/*", "**/bundles/*", "**/javascript/caplin/test/*", "**/node_modules/**", "**/*_NODIST/*"
+	exclude "**/.gitignore", "**/.p4ignore", "**/libs/**/tests/*", "**/libs/**/src-test/*", "**/system-applications/**/tests/*", "**/system-applications/**/src-test/*", "**/bundles/*", "**/javascript/caplin/test/*", "**/libs/javascript/**node_modules/**", "**/*_NODIST/*"
 }
 build.dependsOn distZip
 distZip.mustRunAfter test
@@ -359,6 +359,8 @@ task checkSdkStructure, type:com.caplin.gradle.tasks.CheckDirectoryStructure, de
 		"*/sdk/docs/java/**/*",
 		"*/sdk/docs/js/*",
 		"*/sdk/docs/js/**/*",
+		"*/sdk/jsdoc-toolkit-resources/**",
+		"*/sdk/jsdoc-toolkit-resources/jsdoc-toolkit/node_modules/**",
 		"*/README.txt",
 		"*/LICENSE",
 		"*/apps/apps.txt"
@@ -381,7 +383,7 @@ task checkSdkStructure, type:com.caplin.gradle.tasks.CheckDirectoryStructure, de
 	   "*/sdk/libs/javascript/thirdparty/**",
 	   "*/sdk/libs/javascript/br-libs/**",
 	   "*/sdk/run*",
-	   "**/node_modules/**",
+	   "*/sdk/libs/**/node_modules/**",
 	   "*/apps/*/*",
 	   "**/*_NODIST/**"
 	]
