--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ before_install:
 - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x16"
 - sudo apt-get update -qq
 - sudo apt-get install lib32z1 lib32ncurses5 lib32bz2-1.0 lib32asound2
+- sudo apt-get install ia32-libs
 install:
 - TERM=dumb ./gradlew compileJava
 script:
