--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,7 @@ jdk:
 git:
  depth: 200
 before_install:
-- sudo sh -c "echo 'foreign-architecture i386' > /etc/dpkg/dpkg.cfg.d/architectures"
-- sudo apt-get update -qq
+- echo "foreign-architecture i386" | sudo tee /etc/dpkg/dpkg.cfg.d/multiarch && sudo apt-get update
 - sudo apt-get install libgphoto2-2:i386
 - sudo apt-get install ia32-libs-multiarch
 - sudo apt-get install ia32-libs
