--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -100,15 +100,8 @@ Dependencies.putAll([
 /* browsers are defined as browserName+version because we probably want to use multiple versions */
 def os = org.bladerunnerjs.OSCalculator.getOS()
 Dependencies.putAll([
-	'chrome33'					:	'browser:chrome-'+os+':23.0.1235.0@zip',
+	'chrome'					:	'browser:chrome-'+os+':23.0.1235.0@zip',
 	
-	'firefox12'					:	'browser:firefox-'+os+':12.0@zip',
-	'firefox21'					:	'browser:firefox-'+os+':21.0@zip',
-	
- 	'chromedriver21'			:	'browser:chromedriver_'+os+':21.0.1180.4@zip',
- 	'chromedriver23'			:	'browser:chromedriver_'+os+':23.0.1240.0@zip',
+	'firefox'					:	'browser:firefox-'+os+':21.0@zip',
+	'firefox-webdriver'			:	'browser:firefox-'+os+':12.0@zip',
 ])
-
-Dependencies.put('chrome-stable', dependency('chrome33'));
-Dependencies.put('firefox-stable', dependency('firefox21'));
-Dependencies.put('firefox-webdriver', dependency('firefox12'));
