Updated additional copy of 'test-runner.conf' so phantomjs is always the default browser.

--- a/brjs-sdk/build-resources/test-runner.conf
+++ b/brjs-sdk/build-resources/test-runner.conf
@@ -5,7 +5,7 @@
 jsTestDriverJar: ../sdk/libs/java/testRunner/JsTestDriver.jar
 
 portNumber: 4224
-defaultBrowser: chrome
+defaultBrowser: phantomjs
 
 browserPaths:
   windows:
