using milestone names rather than IDs in json metadata

--- a/build.gradle
+++ b/build.gradle
@@ -197,7 +197,9 @@ task generateReleaseNotes, {
 
 		def releaseNoteFile = file("releases/${tagVersion}.md")
 		def milestoneJson = getReleaseNoteJson(project,tagVersion).milestone
-		def milestoneIds = (milestoneJson instanceof Integer) ? [milestoneJson] : milestoneJson.split(",").collect { it.trim().toInteger()  }
+		def milestones = milestoneJson.split(",").collect { it.trim() }
+		def milestoneIds = githubApi.getMilestoneIds(milestones)
+				
 		def includeIssueLabels = ["bug", "feature", "enhancement", "experience", "breaking-change", "java-api", "js-api"]
 		def issueIncludeLabelsString = includeIssueLabels.join(", ").replaceAll(/^(.*),(.*)$/,'$1 or$2'); /* regex replaces the last ',' with 'or' */
 
