commenting back in createSdkJsDocs

--- a/brjs-sdk/build.gradle
+++ b/brjs-sdk/build.gradle
@@ -221,7 +221,7 @@ task test, dependsOn: testChrome
 
 
 task createSdkJsDocs, dependsOn: assembleSdk, {
-/*	def jsDocTmpAppName = "jsdoc-tmp-app"
+	def jsDocTmpAppName = "jsdoc-tmp-app"
 	doFirst {
 		delete file("workspace/apps/${jsDocTmpAppName}")
 		exec {
@@ -243,7 +243,7 @@ task createSdkJsDocs, dependsOn: assembleSdk, {
 	}
 	doLast {
 		delete file("workspace/apps/${jsDocTmpAppName}")
-	} */
+	} 
 }
 
 
