--- a/brjs-sdk/build-resources/test-runner.conf
+++ b/brjs-sdk/build-resources/test-runner.conf
@@ -9,20 +9,20 @@ defaultBrowser: phantomjs
 
 browserPaths:
   windows:
-    phantomjs: phantomjs/phantomjs-windows/phantomjs.exe$$..\conf\phantomjs-runner.js 
+    phantomjs: ../../build/browsers/phantomjs-windows/phantomjs.exe$$..\conf\phantomjs-runner.js 
     chrome: ../../build/browsers/chrome-win32/chrome.exe$$--incognito$$--user-data-dir=../../build/browsers/profile/chromium
     firefox: ../../build/browsers/firefox-win32/Firefox.exe$$-private$$-profile$$../../build/browsers/profile/firefox
     firefox-webdriver: ../../build/browsers/firefox-win32/Firefox.exe$$-private-profile$$../../build/browsers/profile/firefox
     ie: 'C:\Program Files\Internet Explorer\iexplore.exe'
   mac:
-    phantomjs: phantomjs/phantomjs-macosx/bin/phantomjs$$../conf/phantomjs-runner.js
+    phantomjs: ../../build/browsers/phantomjs-macosx/bin/phantomjs$$../conf/phantomjs-runner.js
     chrome: ../../build/browsers/chrome-mac/Chromium.app/Contents/MacOS/Chromium$$--incognito$$--user-data-dir=../../build/browsers/profile/chromium
     firefox: ../../build/browsers/firefox-mac/Firefox.app/Contents/MacOS/firefox$$-private
     firefox-webdriver: ../../build/browsers/firefox-mac/Firefox.app/Contents/MacOS/firefox$$-private
     safari: /Applications/Safari.app/Contents/MacOS/Safari
 # firefox on Mac doesnt use a custom profile because of a bug with the profile argument (https://bugzilla.mozilla.org/show_bug.cgi?id=673955)
   linux:
-    phantomjs: phantomjs/phantomjs-linux-i686/bin/phantomjs$$../conf/phantomjs-runner.js
+    phantomjs: ../../build/browsers/phantomjs-linux-i686/bin/phantomjs$$../conf/phantomjs-runner.js
     chrome: ../../build/browsers/chrome-linux/chrome$$--incognito$$--user-data-dir=../../build/browsers/profile/chromium
     chromedriver: ../../build/browsers/chromedriver
     firefox: ../../build/browsers/firefox-linux/firefox$$-private$$-profile$$../../build/browsers/profile/firefox$$--no-remote
