--- a/brjs-sdk/build.gradle
+++ b/brjs-sdk/build.gradle
@@ -40,9 +40,10 @@ dependencies {
 	testRunner project(path: ':brjs-logger-binding')
 	testRunner files('build-resources/JsTestDriver.conf')
 	
-	phantomjs dependency('phantomjs_windows')
-	phantomjs dependency('phantomjs_mac')
-	phantomjs dependency('phantomjs_linux')
+	phantomjs dependency('phantomjs')
+//	phantomjs dependency('phantomjs_windows')
+//	phantomjs dependency('phantomjs_mac')
+//	phantomjs dependency('phantomjs_linux')
 	
 	browsers_dep dependency('chrome')
 	browsers_dep dependency('firefox')
@@ -57,8 +58,10 @@ task copyBrowsers(type: Sync) {
 	description "Copies all browser dependencies into " + relativePath(browserRootDir) + "."
 	from { configurations.browsers_dep.collect { browser -> zipTree(browser) } }
 	from { configurations.browsers_webdriver.collect { browser -> zipTree(browser) } }
+	from { configurations.phantomjs.collect { browser -> zipTree(browser) } }
 	eachFile {
 		it.path = it.path.replaceAll("-[0-9\\.]+/", "/") // strip the version string
+		it.path = it.path.replaceAll("-[a-z0-9]+\\.[a-z0-9]+\\.[a-z0-9]+-", "-") // strip phantomjs version
 	}
 	into browserRootDir
 	doLast {
@@ -182,13 +185,13 @@ task assembleSdk, type: Copy, dependsOn: [configurations.system, configurations.
 		rename 'JsTestDriver-(.*).jar', 'JsTestDriver.jar'
 	}
 	
-	from (configurations.phantomjs.collect { zipTree(it) })
-	{
-		into "sdk/phantomjs"
-		eachFile {
-			it.path = it.path.replaceAll("-[a-z0-9]+\\.[a-z0-9]+\\.[a-z0-9]+-", "-") // strip the version string
-		}
-	}
+//	from (configurations.phantomjs.collect { zipTree(it) })
+//	{
+//		into "sdk/phantomjs"
+//		eachFile {
+//			it.path = it.path.replaceAll("-[a-z0-9]+\\.[a-z0-9]+\\.[a-z0-9]+-", "-") // strip the version string
+//		}
+//	}
 
 	doFirst {
 		delete file("workspace/sdk/libs/java")
